#ifndef HELP_H
#define HELP_H
#include <QMainWindow>
#include <QDialog>
#include"dialog.h"
#include <QMediaPlayer>
#include <QDebug>
#include<QMediaPlaylist>
#include <QTableWidget>
#include<QTableView>
#include<QTableWidgetItem>
#include <QAbstractTableModel>
#include <QStandardItemModel>
#include<qlayout.h>
#include<QListWidget>
#include<QHeaderView>
#include<QListWidget>
#include<QBrush>
 struct song{
    QString songnameshow,album,singer,songpath,release_year,type;
};
namespace Ui {
class HELP;
}

class HELP : public QMainWindow
{
    Q_OBJECT

public:
    explicit HELP(QWidget *parent = nullptr);
  QMediaPlayer* player;
   QMediaPlaylist* playlist;
     QMediaPlaylist* ext;
    QTableWidget* tablel;
    QTableWidgetItem*item;
     QTableWidgetItem*item2;
      QTableWidgetItem*item3;
       QTableWidgetItem*item4;
        QTableWidgetItem*item5;
         QTableWidgetItem*item6;
        QListWidget*list;
        QListWidgetItem* items_cnt;
   QHeaderView* vh=new QHeaderView(Qt::Vertical);
   QBrush* defaultBrush=new QBrush;
    ~HELP();

private slots:
        void on_sliderProgress_sliderMoved(int position);
        void on_sliderVolume_sliderMoved(int position);
        void on_lineEdit_cursorPositionChanged(int arg1, int arg2);
        void on_pushButton_clicked();

        void on_pushButton_2_clicked();

        void on_pushButton_3_clicked();

        void on_pushButton_4_clicked();

        void on_pushButton_5_clicked();
        void on_positionChanged(qint64 position);

        void on_durationChanged(qint64 position);

        void on_lineEdit_textChanged(const QString &arg1);

        void on_doubleSpinBox_valueChanged(double arg1);

        void on_pushButton_6_clicked();

        void on_pushButton_7_clicked();

        void on_pushButton_8_clicked();

        void on_pushButton_9_clicked();

        void on_listWidget_itemDoubleClicked(QListWidgetItem *item);

private:
    Ui::HELP *ui;
 void updatef();
};

#endif // HELP_H
